--- a/CodigoFuente/x32/Orbita/Orbita.Winsock/Orbita.Winsock.vbproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Winsock/Orbita.Winsock.vbproj
@@ -197,6 +197,9 @@
     <EmbeddedResource Include="Winsock.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetDir)Orbita.Winsock.dll" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
